# test_cython_cmake

./: CMakeLists.txt  common.pxd  common.pyx  test.py  test_cython.pyx
include/: test_cython.hpp
